--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
     </style>
-    <title>Vite + React</title>
+    <title>Imagine</title>
   </head>
   <body>
     <div id="root"></div>
